# pipelineCombat

./: .gitignore  CHANGELOG.md  README.md  SETUP_COMPLETE.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: README.md  development-guide.md  getting-started.md  user-guide.md
examples/: demo.py  pipeline_combat_demo.py
scripts/: extract_api_docs.py  format_code.sh  format_file.sh  generate_docs.sh
src/pipelinecombat/: __init__.py  diffusion.py  harmonization.py  pipelineCombat.py  statistics.py
src/pipelinecombat/model/: design.py
