[project]
name = "pipelinecombat"
version = "0.1.0"
description = "Pipeline Combat - A Python project for neuroimaging data processing and harmonization"
readme = "README.md"
authors = [
    { name = "AlexVCaron", email = "alex.valcourt.caron@usherbrooke.ca" }
]
requires-python = ">=3.12"
dependencies = [
    "dipy",
    "neuroharmonize>=2.4.5",
    "pgmpy",
    "statsmodels",
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "autoflake",
    "isort",
    "pyupgrade",
    "black",
    "pdoc",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[project.scripts]
pipelinecombat = "pipelinecombat:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
